# hwtray

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index.html  mise.toml  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/homewizard-api/: Cargo.toml
crates/homewizard-api/src/: client.rs  error.rs  lib.rs  types.rs
crates/homewizard-core/: Cargo.toml
crates/homewizard-core/src/: config.rs  discovery.rs  fs_utils.rs  lib.rs  telemetry.rs
crates/homewizard-desktop/: Cargo.toml  tauri.conf.json
crates/homewizard-desktop/capabilities/: default.json
crates/homewizard-desktop/icons/: icon.icns
crates/homewizard-desktop/src/: commands.rs  events.rs  lib.rs  main.rs  poller.rs  state.rs  tray.rs  tray_metrics.rs  types.rs  windows.rs
crates/tray-title/: Cargo.toml
crates/tray-title/src/: lib.rs  macos.rs
docs/: DEVELOPMENT.md
scripts/: bump-version.js  bump-version.sh  install-hooks.sh  release.sh
src/: App.vue
src/components/: AboutDivider.vue  AboutHeader.vue  AboutLayout.vue  AboutLibs.vue  AboutLinks.vue  AddRowButton.vue  AppVersion.vue  BackButton.vue  BaseSelect.test.ts  BaseSelect.vue  ButtonRow.vue  DashboardLayout.vue  DeviceActionsMenu.test.ts  DeviceActionsMenu.vue  DeviceCheckboxItem.test.ts  DeviceCheckboxItem.vue  DeviceIcon.test.ts  DeviceIcon.vue  DeviceListItem.test.ts  DeviceListItem.vue  DevicePageLayout.test.ts  DevicePageLayout.vue  DraggableList.vue  GasHero.vue  HiddenDevicesToggle.vue  InfoBox.test.ts  InfoBox.vue  MetricCard.test.ts  MetricCard.vue  MetricSection.vue  OfflineState.vue  PollIndicator.vue  PowerChart.test.ts  PowerChart.vue  PowerHero.test.ts  PowerHero.vue  PowerSummary.test.ts  PowerSummary.vue  ScanningIndicator.test.ts  ScanningIndicator.vue  (+18 more)
src/composables/: useAnimatedNumber.test.ts  useAnimatedNumber.ts  useAutoResize.ts  useDeviceActions.test.ts  useDeviceActions.ts  useDiscoveryScanner.test.ts  useDiscoveryScanner.ts  useHomeWizard.test.ts  useHomeWizard.ts  useTauriEvents.ts  useToast.test.ts  useToast.ts
src/router/: index.ts
src/stores/: devices.test.ts  devices.ts  discovery.test.ts  discovery.ts  settings.test.ts  settings.ts
src/styles/: main.css
src/types/: device.ts  products.ts
src/utils/: format.test.ts  format.ts
src/views/: AboutView.vue  DashboardView.vue  DeviceView.vue  DiscoveryView.vue  GasView.vue  SettingsView.vue  TrayCustomizeView.vue
