[package]
name = "homewizard-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Types and HTTP client for the HomeWizard Energy local API"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"
