[package]
name = "homewizard-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "mDNS discovery, polling, and business logic for HomeWizard devices"

[dependencies]
homewizard-api.workspace = true
mdns-sd.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
