[package]
name = "homewizard-desktop"
# Desktop app has its own release cadence; the workspace version is a
# background value for the internal api/core crates (which never publish).
version = "0.1.2"
authors.workspace = true
edition.workspace = true
description = "Tauri desktop app for HomeWizard Energy monitoring"
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "homewizard_desktop_lib"

[dependencies]
homewizard-api.workspace = true
homewizard-core.workspace = true
tray-title = { path = "../tray-title" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
futures = "0.3"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
