[package]
name = "tray-title"
version.workspace = true
edition = "2021"
description = "Set attributed (styled) tray icon titles on macOS"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSStatusBar", "NSStatusBarButton", "NSStatusItem", "NSButton", "NSControl", "NSFont", "NSParagraphStyle", "NSText"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSAttributedString", "NSDictionary", "NSValue"] }
